--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -18,6 +18,7 @@
   "Login": "Iniciar Sesión",
   "Logout": "Salir",
   "Name": "Nombre",
+  "Not Found": "Página no encontrada",
   "Oh no": "Oh no ",
   "Page Expired": "Página Expirada",
   "Page Not Found": "Página no encontrada",
