se arreglaron errores de user y profile

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -27,7 +27,7 @@
   "Regards": "Saludos",
   "Register": "Registrar",
   "Remember Me": "Recuérdame",
-  "Reset Password": "Restablecer contraseña",
+  "Reset Password": "Reestablecer contraseña",
   "Reset Password Notification": "Notificación de restablecimiento de contraseña",
   "Send Password Reset Link": "Enviar enlace para restablecer la contraseña",
   "Service Unavailable": "Servicio no disponible",
