--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -15,7 +15,7 @@
   "If you did not receive the email": "Si no ha recibido el correo electrónico",
   "If you did not request a password reset, no further action is required.": "Si no ha solicitado el restablecimiento de contraseña, omita este correo electrónico.",
   "If you’re having trouble clicking the \":actionText\" button, copy and paste the URL below\ninto your web browser: [:actionURL](:actionURL)": "Si tiene problemas para hacer clic en el botón \":actionText\", copie y pegue la siguiente URL \nen su navegador web: [:actionURL](:actionURL)",
-  "Login": "Iniciar Sesión",
+  "Login": "Ingreso",
   "Logout": "Salir",
   "Name": "Nombre",
   "Not Found": "Página no encontrada",
@@ -25,7 +25,7 @@
   "Password": "Contraseña",
   "Please click the button below to verify your email address.": "Por favor, haga clic en el botón de abajo para verificar su dirección de correo electrónico.",
   "Regards": "Saludos",
-  "Register": "Registrar",
+  "Register": "Registro",
   "Remember Me": "Recuérdame",
   "Reset Password": "Reestablecer contraseña",
   "Reset Password Notification": "Notificación de restablecimiento de contraseña",
