se diseño el detalle de un acompañamiento

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -57,6 +57,8 @@
     "Name Accompaniment": "Nombre Acompañamiento",
     "Phase": "Fase",
     "Status": "Estado",
+    "Open": "Abierto",
+    "Close": "Cerrado",
     "Adviser": "Asesor",
     "Count Articulations": "Cantidad articulaciones",
     "Download": "Descargar",
