se valido el form wizard input hidden

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -54,12 +54,17 @@
     "Node" : "Nodo",
     "Code Accompaniment": "Código Acompañamiento",
     "Created_at": "Fecha registro",
+    "Created_by": "Creado Por",
     "Name Accompaniment": "Nombre Acompañamiento",
     "Phase": "Fase",
+    "Progress": "Progreso",
     "Status": "Estado",
     "Open": "Abierto",
     "Close": "Cerrado",
+    "Description": "Descripción",
     "Adviser": "Asesor",
+    "Start Date": "Fecha inicio",
+    "End Date": "Fecha cierre",
     "Count Articulations": "Cantidad articulaciones",
     "Download": "Descargar",
     "Filter": "Filtrar",
