se diseño formulario de articulaciones y se creo el reporte de excel de acomapañamientos

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -50,15 +50,18 @@
     "register new mail": "Registrar nuevo correo",
     "Accompaniments" : "Acompañamientos",
     "New Accompaniment" : "Nuevo Acompañamiento",
+    "New Articulation" : "Nueva Articulación",
     "Process" : "Proceso",
     "Node" : "Nodo",
     "Code Accompaniment": "Código Acompañamiento",
+    "Accompaniment Type": "Tipo Acompañamiento",
     "Created_at": "Fecha registro",
     "Created_by": "Creado Por",
     "Name Accompaniment": "Nombre Acompañamiento",
     "Phase": "Fase",
     "Progress": "Progreso",
     "Status": "Estado",
+    "Scope": "Alcance",
     "Open": "Abierto",
     "Close": "Cerrado",
     "Description": "Descripción",
