se cambio el nombre del modulo acompañamientos a etapa de articulaciones y se quito el tipo de acompañamiento (Empresa)

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -48,16 +48,16 @@
     "Whoops, something went wrong on our servers.": "Vaya, algo salió mal en nuestros servidores.",
     "Change email": "Cambiar correo electrónico",
     "register new mail": "Registrar nuevo correo",
-    "Accompaniments" : "Acompañamientos",
-    "New Accompaniment" : "Nuevo Acompañamiento",
+    "Accompaniments" : "Etapa de articulación",
+    "New Accompaniment" : "Nueva etapa de articulación",
     "New Articulation" : "Nueva Articulación",
     "Process" : "Proceso",
     "Node" : "Nodo",
-    "Code Accompaniment": "Código Acompañamiento",
-    "Accompaniment Type": "Tipo Acompañamiento",
+    "Code Accompaniment": "Código etapa de articulación",
+    "Accompaniment Type": "Categoria etapa de articulación",
     "Created_at": "Fecha registro",
     "Created_by": "Creado Por",
-    "Name Accompaniment": "Nombre Acompañamiento",
+    "Name Accompaniment": "Nombre de etapa de articulación",
     "Phase": "Fase",
     "Progress": "Progreso",
     "Status": "Estado",
@@ -69,7 +69,10 @@
     "Start Date": "Fecha inicio",
     "End Date": "Fecha cierre",
     "Count Articulations": "Cantidad articulaciones",
+    "Articulations" : "Articulaciones",
     "Download": "Descargar",
     "Filter": "Filtrar",
-    "Home" : "Inicio"
+    "Home" : "Inicio",
+    "Details" : "Detalles",
+    "Interlocutory talent" : "Talento Interlocutor"
 }
