Refactoring module articulacions

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -48,17 +48,17 @@
     "Whoops, something went wrong on our servers.": "Vaya, algo salió mal en nuestros servidores.",
     "Change email": "Cambiar correo electrónico",
     "register new mail": "Registrar nuevo correo",
-    "Accompaniments" : "Etapa de articulación",
-    "New Accompaniment" : "Nueva etapa de articulación",
-    "Edit Accompaniment" : "Editar etapa de articulación",
+    "articulation-stage" : "Etapa de articulación",
+    "New articulation-stage" : "Nueva etapa de articulación",
+    "Edit articulation-stage" : "Editar etapa de articulación",
     "New Articulation" : "Nueva Articulación",
     "Process" : "Proceso",
     "Node" : "Nodo",
-    "Code Accompaniment": "Código etapa de articulación",
-    "Accompaniment Type": "Categoria etapa de articulación",
+    "Code articulation-stage": "Código etapa de articulación",
+    "articulation-stage Type": "Categoria etapa de articulación",
     "Created_at": "Fecha registro",
     "Created_by": "Creado Por",
-    "Name Accompaniment": "Nombre de etapa de articulación",
+    "Name articulation-stage": "Nombre de etapa de articulación",
     "Phase": "Fase",
     "Progress": "Progreso",
     "Status": "Estado",
