se cambio codigo de acompañamientos a etapa de articulacion

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -52,6 +52,8 @@
     "New articulation-stage" : "Nueva etapa de articulación",
     "Edit articulation-stage" : "Editar etapa de articulación",
     "New Articulation" : "Nueva Articulación",
+    "New ArticulationStage" : "Nueva Etapa Articulación",
+    "Name ArticulationStage" : "Nombre Etapa Articulación",
     "Process" : "Proceso",
     "Node" : "Nodo",
     "Code articulation-stage": "Código etapa de articulación",
