desarrollo de submodulo de tipo de subarticulaciones, falta asignar permisos por rol

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -49,10 +49,12 @@
     "Change email": "Cambiar correo electrónico",
     "register new mail": "Registrar nuevo correo",
     "articulation-stage" : "Etapa de articulación",
+    "articulation-subtype" : "Tipo de subarticulación",
     "New articulation-stage" : "Nueva etapa de articulación",
     "Edit articulation-stage" : "Editar etapa de articulación",
     "New Articulation" : "Nueva Articulación",
     "New ArticulationStage" : "Nueva Etapa Articulación",
+    "New ArticulationSubtype" : "Nuevo tipo subarticulación",
     "Name ArticulationStage" : "Nombre Etapa Articulación",
     "Process" : "Proceso",
     "Node" : "Nodo",
