se rediseño el listado de estados de articulaciones con subarticulaciones en un solo datatables

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -63,6 +63,7 @@
     "Created_at": "Fecha registro",
     "Created_by": "Creado Por",
     "Name articulation-stage": "Nombre de etapa de articulación",
+    "Name articulation": "Nombre articulación",
     "Phase": "Fase",
     "Progress": "Progreso",
     "Status": "Estado",
