nuevas validaciones para los modulos de tipo articulacion, tipo subarticulacion y el (solicitar - aprobar) abrir/cierre etapa articulacion

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -33,6 +33,7 @@
     "Service Unavailable": "Servicio no disponible",
     "Sorry, the page you are looking for could not be found.": "Lo sentimos, la página que está buscando no se pudo encontrar.",
     "Sorry, you are forbidden from accessing this page.": "Lo sentimos, se le prohíbe el acceso a esta página.",
+    "Sorry, you are not authorized to access the page": "Lo sentimos, no estás autorizado para acceder a la página",
     "Sorry, you are making too many requests to our servers.": "Lo sentimos, estás haciendo demasiadas peticiones a nuestros servidores.",
     "Sorry, you are not authorized to access this page.": "Lo sentimos, no estás autorizado para acceder a esta página.",
     "Sorry, your session has expired. Please refresh and try again.": "Lo sentimos, tu sesión ha expirado. Por favor, actualice y vuelva a intentarlo.",
