--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -77,6 +77,7 @@
     "End Date": "Fecha cierre",
     "Count Articulations": "Cantidad articulaciones",
     "Articulations" : "Articulaciones",
+    "articulation" : "articulación",
     "Download": "Descargar",
     "Filter": "Filtrar",
     "Home" : "Inicio",
