--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -61,6 +61,8 @@
     "Node" : "Nodo",
     "Code articulation-stage": "Código etapa de articulación",
     "articulation-stage Type": "Categoria etapa de articulación",
+    "Code ArticulationStage": "Código etapa de articulación",
+    "ArticulationStage Type": "Tipo etapa de articulación",
     "Created_at": "Fecha registro",
     "Created_by": "Creado Por",
     "Name articulation-stage": "Nombre de etapa de articulación",
