--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -33,7 +33,6 @@
     "Service Unavailable": "Servicio no disponible",
     "Sorry, the page you are looking for could not be found.": "Lo sentimos, la página que está buscando no se pudo encontrar.",
     "Sorry, you are forbidden from accessing this page.": "Lo sentimos, se le prohíbe el acceso a esta página.",
-    "Sorry, you are not authorized to access the page": "Lo sentimos, no estás autorizado para acceder a la página",
     "Sorry, you are making too many requests to our servers.": "Lo sentimos, estás haciendo demasiadas peticiones a nuestros servidores.",
     "Sorry, you are not authorized to access this page.": "Lo sentimos, no estás autorizado para acceder a esta página.",
     "Sorry, you are not authorized to access the page": "Lo sentimos, no estás autorizado para acceder a la página",
@@ -50,23 +49,23 @@
     "Whoops, something went wrong on our servers.": "Vaya, algo salió mal en nuestros servidores.",
     "Change email": "Cambiar correo electrónico",
     "register new mail": "Registrar nuevo correo",
-    "articulation-stage" : "Etapa de articulación",
+    "articulation-stage" : "Fase de articulación",
     "articulation-subtype" : "Tipo de subarticulación",
+    "articulation-type" : "Categoría de articulación",
     "New articulation-stage" : "Nueva etapa de articulación",
     "Edit articulation-stage" : "Editar etapa de articulación",
     "New Articulation" : "Nueva Articulación",
-    "New ArticulationStage" : "Nueva Etapa Articulación",
+    "New ArticulationStage" : "Nueva Fase de Articulación",
     "New ArticulationSubtype" : "Nuevo tipo subarticulación",
-    "Name ArticulationStage" : "Nombre Etapa Articulación",
+    "Name ArticulationStage" : "Nombre Fase Articulación",
     "Process" : "Proceso",
     "Node" : "Nodo",
-    "Code articulation-stage": "Código etapa de articulación",
-    "articulation-stage Type": "Categoria etapa de articulación",
-    "Code ArticulationStage": "Código etapa de articulación",
+    "Code articulation-stage": "Código fase de articulación",
+    "Code ArticulationStage": "Código fase de articulación",
     "ArticulationStage Type": "Tipo etapa de articulación",
     "Created_at": "Fecha registro",
     "Created_by": "Creado Por",
-    "Name articulation-stage": "Nombre de etapa de articulación",
+    "Name articulation-stage": "Nombre de fase de articulación",
     "Name articulation": "Nombre articulación",
     "Phase": "Fase",
     "Progress": "Progreso",
@@ -78,6 +77,7 @@
     "Adviser": "Asesor",
     "Start Date": "Fecha inicio",
     "End Date": "Fecha cierre",
+    "Entities": "Entidades",
     "Count Articulations": "Cantidad articulaciones",
     "Articulations" : "Articulaciones",
     "articulation" : "articulación",
@@ -87,5 +87,7 @@
     "Details" : "Detalles",
     "Interlocutory talent" : "Talento Interlocutor",
     "Project" : "Proyecto",
-    "Confidentiality Format" : "Formato de confidencialidad"
+    "Confidentiality Format" : "Formato de confidencialidad",
+    "No results found": "No se encontraron resultados",
+    "No register": "No registra"
 }
