Mejora de consulta de usos

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -80,6 +80,8 @@
     "Entities": "Entidades",
     "Count Articulations": "Cantidad articulaciones",
     "Articulations" : "Articulaciones",
+    "Projects" : "Proyectos",
+    "Ideas" : "Ideas",
     "articulation" : "articulación",
     "Download": "Descargar",
     "Filter": "Filtrar",
