migracion de articulaciones 2021 - 2022 falta validar trazabilidad y archivos

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -67,6 +67,7 @@
     "Created_by": "Creado Por",
     "Name articulation-stage": "Nombre de fase de articulación",
     "Name articulation": "Nombre articulación",
+    "Code articulation": "Código articulación",
     "Phase": "Fase",
     "Progress": "Progreso",
     "Status": "Estado",
@@ -88,6 +89,7 @@
     "Home" : "Inicio",
     "Details" : "Detalles",
     "Interlocutory talent" : "Talento Interlocutor",
+    "Participants talents" : "Talentos Participantes",
     "Project" : "Proyecto",
     "Confidentiality Format" : "Formato de confidencialidad",
     "No results found": "No se encontraron resultados",
