se cambio el color a las vistas del modulo de fase de articulacion y se testeo index, filtros, reports, create fase articulacion

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -56,6 +56,7 @@
     "Edit articulation-stage" : "Editar etapa de articulación",
     "New Articulation" : "Nueva Articulación",
     "New ArticulationStage" : "Nueva Fase de Articulación",
+    "Edit ArticulationStage" : "Editar Fase de Articulación",
     "New ArticulationSubtype" : "Nuevo tipo subarticulación",
     "Name ArticulationStage" : "Nombre Fase Articulación",
     "Process" : "Proceso",
