--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -64,6 +64,7 @@
     "Code articulation-stage": "Código fase de articulación",
     "Code ArticulationStage": "Código fase de articulación",
     "ArticulationStage Type": "Tipo etapa de articulación",
+    "Articulation Type": "Tipo de articulación",
     "Created_at": "Fecha registro",
     "Created_by": "Creado Por",
     "Name articulation-stage": "Nombre de fase de articulación",
