se añadio el campo resultados esperados y se quito el campo formato de confidencialidad de la fase de articulacion

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -85,6 +85,7 @@
     "Articulations" : "Articulaciones",
     "Projects" : "Proyectos",
     "Ideas" : "Ideas",
+    "Expected Results" : "Expectativas, accciones o resultados esperados",
     "articulation" : "articulación",
     "Download": "Descargar",
     "Filter": "Filtrar",
