mejora y solucion de errores en articulaciones

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -72,6 +72,7 @@
     "Progress": "Progreso",
     "Status": "Estado",
     "Scope": "Alcance",
+    "Objetive": "Objetivo   ",
     "Open": "Abierta",
     "Close": "Cerrada",
     "Description": "Descripción",
