se corrigio mensajes en los emails de articulaciones y se quito la palabra aval

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -50,9 +50,10 @@
     "Change email": "Cambiar correo electrónico",
     "register new mail": "Registrar nuevo correo",
     "articulation-stage" : "Fase de articulación",
+    "articulation-stage / articulation" : "Fase de articulación / Acción de articulación",
     "articulation-subtype" : "Tipo de subarticulación",
     "articulation-type" : "Categoría de articulación",
-    "New Articulation" : "Nueva Articulación",
+    "New Articulation" : "Nueva acción de articulación",
     "New ArticulationStage" : "Nueva Fase de Articulación",
     "Edit ArticulationStage" : "Editar Fase de Articulación",
     "New ArticulationSubtype" : "Nuevo tipo subarticulación",
@@ -82,6 +83,7 @@
     "Entities": "Entidades",
     "Count Articulations": "Cantidad articulaciones",
     "Articulations" : "Articulaciones",
+    "Articulation" : "Articulación",
     "Projects" : "Proyectos",
     "Ideas" : "Ideas",
     "Expected Results" : "Expectativas, accciones o resultados esperados",
