Se agregó el rol de auxiliar, se desarrolló la funcionalidad para agregar caracterización de los proyectos a través de un excel, se arregló el group concat de la caracterización de los proyectos que a veces mostraba la caracterización repetida

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -97,5 +97,6 @@
     "Project" : "Proyecto",
     "Confidentiality Format" : "Formato de confidencialidad",
     "No results found": "No se encontraron resultados",
-    "No register": "No registra"
+    "No register": "No registra",
+    "Proyecto": "Proyectos"
 }
